<resources>
    <string name="app_name">Games</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_btn">GO</string>
    <string name="player_two">Player Two</string>
    <string name="player_one">Player One</string>
    <string name="toast_username_players">UserName can not be Number or null</string>
    <string name="toast_wrong">Please Enter right Username</string>
    <string name="btn_tic_tac_toe">Tic Tac Toe</string>
    <string name="btn_row_a_in_4">Row a in 4</string>
    <string name="txt_game">Which game do you like to play?</string>
    <string name="game_name_tic">Game : TicTacToe</string>
    <string name="game_name_row">Game : 4 In Row</string>
    <string name="score_player_one">Player One  </string>
    <string name="score_player_two">Player Two  </string>
    <string name="refresh">Do you want to play again?</string>
    <string name="column">column</string>
    <string name="error_out_band">Please enter number less than table row or column And more than Zero</string>
    <string name="error_empty">Enter a number Please</string>
    <string name="setting">Setting</string>
</resources>