<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Controller.Fragment.GamesFragment">


    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/btn_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="3dp"
        android:text="@string/setting"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/game"
        android:layout_width="283dp"
        android:layout_height="50dp"
        android:layout_margin="3dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/txt_game"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_land" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ticetactoe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/green_light_stroke"
            android:layout_weight="1"
            android:text="@string/btn_tic_tac_toe" />

        <Button
            android:id="@+id/btn_four_in_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/green_dark_stroke"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/btn_row_a_in_4" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        >

    </FrameLayout>

</FrameLayout>