<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d4e8cd"
    tools:context=".Controller.Fragment.TicTacToeFragment">


    <TextView
        android:id="@+id/game_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/green_light"
        android:gravity="center"
        android:text="@string/game_name_tic"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_port" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/player_one_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/player_two"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/player_two_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/score_player_one"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_port" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/game_btns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/img_0"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/yellow_green" />

            <Button
                android:id="@+id/img_1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@color/yellow_green" />

            <Button
                android:id="@+id/img_2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/yellow_green" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/img_3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/yellow_green" />

            <Button
                android:id="@+id/img_4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@color/yellow_green" />

            <Button
                android:id="@+id/img_5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/yellow_green" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/img_6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/yellow_green" />

            <Button
                android:id="@+id/img_7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@color/yellow_green" />

            <Button
                android:id="@+id/img_8"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/yellow_green" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/refresh"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/green_dark"
        android:padding="10dp"
        android:visibility="gone"
        />
</FrameLayout>